Update to Java 15, build with Apple notarization, Sentry fixes